sdk/monitor/arm-monitor/samples/v7/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                                                       | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| ------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [actionGroupsCreateOrUpdateSample.js][actiongroupscreateorupdatesample]                                             | Create a new action group or update an existing one. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-09-01/examples/createOrUpdateActionGroup.json                                                                                                                                                                                                                                                                                                                                          |
| [actionGroupsDeleteSample.js][actiongroupsdeletesample]                                                             | Delete an action group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-09-01/examples/deleteActionGroup.json                                                                                                                                                                                                                                                                                                                                                                               |
| [actionGroupsEnableReceiverSample.js][actiongroupsenablereceiversample]                                             | Enable a receiver in an action group. This changes the receiver's status from Disabled to Enabled. This operation is only supported for Email or SMS receivers. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-09-01/examples/enableReceiver.json                                                                                                                                                                                                                                          |
| [actionGroupsGetSample.js][actiongroupsgetsample]                                                                   | Get an action group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-09-01/examples/getActionGroup.json                                                                                                                                                                                                                                                                                                                                                                                     |
| [actionGroupsGetTestNotificationsSample.js][actiongroupsgettestnotificationssample]                                 | Get the test notifications by the notification id x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-09-01/examples/getTestNotifications.json                                                                                                                                                                                                                                                                                                                                                  |
| [actionGroupsListByResourceGroupSample.js][actiongroupslistbyresourcegroupsample]                                   | Get a list of all action groups in a resource group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-09-01/examples/listActionGroups.json                                                                                                                                                                                                                                                                                                                                                   |
| [actionGroupsListBySubscriptionIdSample.js][actiongroupslistbysubscriptionidsample]                                 | Get a list of all action groups in a subscription. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-09-01/examples/listActionGroups.json                                                                                                                                                                                                                                                                                                                                                     |
| [actionGroupsPostTestNotificationsSample.js][actiongroupsposttestnotificationssample]                               | Send test notifications to a set of provided receivers x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-09-01/examples/postTestNotifications.json                                                                                                                                                                                                                                                                                                                                            |
| [actionGroupsUpdateSample.js][actiongroupsupdatesample]                                                             | Updates an existing action group's tags. To update other fields use the CreateOrUpdate method. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-09-01/examples/patchActionGroup.json                                                                                                                                                                                                                                                                                                         |
| [activityLogAlertsCreateOrUpdateSample.js][activitylogalertscreateorupdatesample]                                   | Create a new activity log alert or update an existing one. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2017-04-01/examples/createOrUpdateActivityLogAlert.json                                                                                                                                                                                                                                                                                                                               |
| [activityLogAlertsDeleteSample.js][activitylogalertsdeletesample]                                                   | Delete an activity log alert. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2017-04-01/examples/deleteActivityLogAlert.json                                                                                                                                                                                                                                                                                                                                                                    |
| [activityLogAlertsGetSample.js][activitylogalertsgetsample]                                                         | Get an activity log alert. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2017-04-01/examples/getActivityLogAlert.json                                                                                                                                                                                                                                                                                                                                                                          |
| [activityLogAlertsListByResourceGroupSample.js][activitylogalertslistbyresourcegroupsample]                         | Get a list of all activity log alerts in a resource group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2017-04-01/examples/listActivityLogAlerts.json                                                                                                                                                                                                                                                                                                                                        |
| [activityLogAlertsListBySubscriptionIdSample.js][activitylogalertslistbysubscriptionidsample]                       | Get a list of all activity log alerts in a subscription. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2017-04-01/examples/listActivityLogAlerts.json                                                                                                                                                                                                                                                                                                                                          |
| [activityLogAlertsUpdateSample.js][activitylogalertsupdatesample]                                                   | Updates an existing ActivityLogAlertResource's tags. To update other fields use the CreateOrUpdate method. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2017-04-01/examples/patchActivityLogAlert.json                                                                                                                                                                                                                                                                                        |
| [activityLogsListSample.js][activitylogslistsample]                                                                 | Provides the list of records from the activity logs. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/GetActivityLogsFiltered.json                                                                                                                                                                                                                                                                                                                                            |
| [alertRuleIncidentsGetSample.js][alertruleincidentsgetsample]                                                       | Gets an incident associated to an alert rule x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/getAlertRuleIncident.json                                                                                                                                                                                                                                                                                                                                                       |
| [alertRuleIncidentsListByAlertRuleSample.js][alertruleincidentslistbyalertrulesample]                               | Gets a list of incidents associated to an alert rule x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/listAlertRuleIncidents.json                                                                                                                                                                                                                                                                                                                                             |
| [alertRulesCreateOrUpdateSample.js][alertrulescreateorupdatesample]                                                 | Creates or updates a classic metric alert rule. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/createOrUpdateAlertRule.json                                                                                                                                                                                                                                                                                                                                                 |
| [alertRulesDeleteSample.js][alertrulesdeletesample]                                                                 | Deletes a classic metric alert rule x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/deleteAlertRule.json                                                                                                                                                                                                                                                                                                                                                                     |
| [alertRulesGetSample.js][alertrulesgetsample]                                                                       | Gets a classic metric alert rule x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/getAlertRule.json                                                                                                                                                                                                                                                                                                                                                                           |
| [alertRulesListByResourceGroupSample.js][alertruleslistbyresourcegroupsample]                                       | List the classic metric alert rules within a resource group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/listAlertRule.json                                                                                                                                                                                                                                                                                                                                              |
| [alertRulesListBySubscriptionSample.js][alertruleslistbysubscriptionsample]                                         | List the classic metric alert rules within a subscription. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/listAlertRuleBySubscription.json                                                                                                                                                                                                                                                                                                                                  |
| [alertRulesUpdateSample.js][alertrulesupdatesample]                                                                 | Updates an existing classic metric AlertRuleResource. To update other fields use the CreateOrUpdate method. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/patchAlertRule.json                                                                                                                                                                                                                                                                                              |
| [autoscaleSettingsCreateOrUpdateSample.js][autoscalesettingscreateorupdatesample]                                   | Creates or updates an autoscale setting. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/createOrUpdateAutoscaleSetting.json                                                                                                                                                                                                                                                                                                                                                 |
| [autoscaleSettingsDeleteSample.js][autoscalesettingsdeletesample]                                                   | Deletes and autoscale setting x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/deleteAutoscaleSetting.json                                                                                                                                                                                                                                                                                                                                                                    |
| [autoscaleSettingsGetSample.js][autoscalesettingsgetsample]                                                         | Gets an autoscale setting x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/getAutoscaleSetting.json                                                                                                                                                                                                                                                                                                                                                                           |
| [autoscaleSettingsListByResourceGroupSample.js][autoscalesettingslistbyresourcegroupsample]                         | Lists the autoscale settings for a resource group x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/listAutoscaleSetting.json                                                                                                                                                                                                                                                                                                                                                  |
| [autoscaleSettingsListBySubscriptionSample.js][autoscalesettingslistbysubscriptionsample]                           | Lists the autoscale settings for a subscription x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/listAutoscaleSettingBySubscription.json                                                                                                                                                                                                                                                                                                                                      |
| [autoscaleSettingsUpdateSample.js][autoscalesettingsupdatesample]                                                   | Updates an existing AutoscaleSettingsResource. To update other fields use the CreateOrUpdate method. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/patchAutoscaleSetting.json                                                                                                                                                                                                                                                                                              |
| [baselinesListSample.js][baselineslistsample]                                                                       | **Lists the metric baseline values for a resource**. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2019-03-01/examples/metricBaselines.json                                                                                                                                                                                                                                                                                                                                                    |
| [dataCollectionEndpointsCreateSample.js][datacollectionendpointscreatesample]                                       | Creates or updates a data collection endpoint. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionEndpointsCreate.json                                                                                                                                                                                                                                                                                                                                            |
| [dataCollectionEndpointsDeleteSample.js][datacollectionendpointsdeletesample]                                       | Deletes a data collection endpoint. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionEndpointsDelete.json                                                                                                                                                                                                                                                                                                                                                       |
| [dataCollectionEndpointsGetSample.js][datacollectionendpointsgetsample]                                             | Returns the specified data collection endpoint. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionEndpointsGet.json                                                                                                                                                                                                                                                                                                                                              |
| [dataCollectionEndpointsListByResourceGroupSample.js][datacollectionendpointslistbyresourcegroupsample]             | Lists all data collection endpoints in the specified resource group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionEndpointsListByResourceGroup.json                                                                                                                                                                                                                                                                                                         |
| [dataCollectionEndpointsListBySubscriptionSample.js][datacollectionendpointslistbysubscriptionsample]               | Lists all data collection endpoints in the specified subscription x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionEndpointsListBySubscription.json                                                                                                                                                                                                                                                                                                             |
| [dataCollectionEndpointsUpdateSample.js][datacollectionendpointsupdatesample]                                       | Updates part of a data collection endpoint. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionEndpointsUpdate.json                                                                                                                                                                                                                                                                                                                                               |
| [dataCollectionRuleAssociationsCreateSample.js][datacollectionruleassociationscreatesample]                         | Creates or updates an association. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRuleAssociationsCreate.json                                                                                                                                                                                                                                                                                                                                                 |
| [dataCollectionRuleAssociationsDeleteSample.js][datacollectionruleassociationsdeletesample]                         | Deletes an association. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRuleAssociationsDelete.json                                                                                                                                                                                                                                                                                                                                                            |
| [dataCollectionRuleAssociationsGetSample.js][datacollectionruleassociationsgetsample]                               | Returns the specified association. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRuleAssociationsGet.json                                                                                                                                                                                                                                                                                                                                                    |
| [dataCollectionRuleAssociationsListByResourceSample.js][datacollectionruleassociationslistbyresourcesample]         | Lists associations for the specified resource. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRuleAssociationsListByResource.json                                                                                                                                                                                                                                                                                                                             |
| [dataCollectionRuleAssociationsListByRuleSample.js][datacollectionruleassociationslistbyrulesample]                 | Lists associations for the specified data collection rule. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRuleAssociationsListByRule.json                                                                                                                                                                                                                                                                                                                     |
| [dataCollectionRulesCreateSample.js][datacollectionrulescreatesample]                                               | Creates or updates a data collection rule. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRulesCreate.json                                                                                                                                                                                                                                                                                                                                                    |
| [dataCollectionRulesDeleteSample.js][datacollectionrulesdeletesample]                                               | Deletes a data collection rule. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRulesDelete.json                                                                                                                                                                                                                                                                                                                                                               |
| [dataCollectionRulesGetSample.js][datacollectionrulesgetsample]                                                     | Returns the specified data collection rule. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRulesGet.json                                                                                                                                                                                                                                                                                                                                                      |
| [dataCollectionRulesListByResourceGroupSample.js][datacollectionruleslistbyresourcegroupsample]                     | Lists all data collection rules in the specified resource group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRulesListByResourceGroup.json                                                                                                                                                                                                                                                                                                                 |
| [dataCollectionRulesListBySubscriptionSample.js][datacollectionruleslistbysubscriptionsample]                       | Lists all data collection rules in the specified subscription. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRulesListBySubscription.json                                                                                                                                                                                                                                                                                                                    |
| [dataCollectionRulesUpdateSample.js][datacollectionrulesupdatesample]                                               | Updates part of a data collection rule. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRulesUpdate.json                                                                                                                                                                                                                                                                                                                                                       |
| [diagnosticSettingsCategoryGetSample.js][diagnosticsettingscategorygetsample]                                       | Gets the diagnostic settings category for the specified resource. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2017-05-01-preview/examples/getDiagnosticSettingsCategory.json                                                                                                                                                                                                                                                                                                                |
| [diagnosticSettingsCategoryListSample.js][diagnosticsettingscategorylistsample]                                     | Lists the diagnostic settings categories for the specified resource. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2017-05-01-preview/examples/listDiagnosticSettingsCategories.json                                                                                                                                                                                                                                                                                                          |
| [diagnosticSettingsCreateOrUpdateSample.js][diagnosticsettingscreateorupdatesample]                                 | Creates or updates diagnostic settings for the specified resource. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2017-05-01-preview/examples/createOrUpdateDiagnosticSetting.json                                                                                                                                                                                                                                                                                                             |
| [diagnosticSettingsDeleteSample.js][diagnosticsettingsdeletesample]                                                 | Deletes existing diagnostic settings for the specified resource. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2017-05-01-preview/examples/deleteDiagnosticSetting.json                                                                                                                                                                                                                                                                                                                       |
| [diagnosticSettingsGetSample.js][diagnosticsettingsgetsample]                                                       | Gets the active diagnostic settings for the specified resource. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2017-05-01-preview/examples/getDiagnosticSetting.json                                                                                                                                                                                                                                                                                                                           |
| [diagnosticSettingsListSample.js][diagnosticsettingslistsample]                                                     | Gets the active diagnostic settings list for the specified resource. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2017-05-01-preview/examples/listDiagnosticSettings.json                                                                                                                                                                                                                                                                                                                    |
| [eventCategoriesListSample.js][eventcategorieslistsample]                                                           | Get the list of available event categories supported in the Activity Logs Service.<br>The current list includes the following: Administrative, Security, ServiceHealth, Alert, Recommendation, Policy. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/GetEventCategories.json                                                                                                                                                                                               |
| [logProfilesCreateOrUpdateSample.js][logprofilescreateorupdatesample]                                               | Create or update a log profile in Azure Monitoring REST API. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/createOrUpdateLogProfile.json                                                                                                                                                                                                                                                                                                                                   |
| [logProfilesDeleteSample.js][logprofilesdeletesample]                                                               | Deletes the log profile. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/deleteLogProfile.json                                                                                                                                                                                                                                                                                                                                                                               |
| [logProfilesGetSample.js][logprofilesgetsample]                                                                     | Gets the log profile. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/getLogProfile.json                                                                                                                                                                                                                                                                                                                                                                                     |
| [logProfilesListSample.js][logprofileslistsample]                                                                   | List the log profiles. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/listLogProfile.json                                                                                                                                                                                                                                                                                                                                                                                   |
| [logProfilesUpdateSample.js][logprofilesupdatesample]                                                               | Updates an existing LogProfilesResource. To update other fields use the CreateOrUpdate method. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/patchLogProfile.json                                                                                                                                                                                                                                                                                                          |
| [metricAlertsCreateOrUpdateSample.js][metricalertscreateorupdatesample]                                             | Create or update an metric alert definition. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-03-01/examples/createOrUpdateDynamicMetricAlertMultipleResource.json                                                                                                                                                                                                                                                                                                                           |
| [metricAlertsDeleteSample.js][metricalertsdeletesample]                                                             | Delete an alert rule definition. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-03-01/examples/deleteMetricAlert.json                                                                                                                                                                                                                                                                                                                                                                      |
| [metricAlertsGetSample.js][metricalertsgetsample]                                                                   | Retrieve an alert rule definition. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-03-01/examples/getDynamicMetricAlertMultipleResource.json                                                                                                                                                                                                                                                                                                                                                |
| [metricAlertsListByResourceGroupSample.js][metricalertslistbyresourcegroupsample]                                   | Retrieve alert rule definitions in a resource group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-03-01/examples/listMetricAlert.json                                                                                                                                                                                                                                                                                                                                                    |
| [metricAlertsListBySubscriptionSample.js][metricalertslistbysubscriptionsample]                                     | Retrieve alert rule definitions in a subscription. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-03-01/examples/listMetricAlert.json                                                                                                                                                                                                                                                                                                                                                      |
| [metricAlertsStatusListByNameSample.js][metricalertsstatuslistbynamesample]                                         | Retrieve an alert rule status. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-03-01/examples/getMetricAlertStatusByName.json                                                                                                                                                                                                                                                                                                                                                               |
| [metricAlertsStatusListSample.js][metricalertsstatuslistsample]                                                     | Retrieve an alert rule status. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-03-01/examples/getMetricAlertStatus.json                                                                                                                                                                                                                                                                                                                                                                     |
| [metricAlertsUpdateSample.js][metricalertsupdatesample]                                                             | Update an metric alert definition. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-03-01/examples/UpdateMetricAlert.json                                                                                                                                                                                                                                                                                                                                                                    |
| [metricDefinitionsListSample.js][metricdefinitionslistsample]                                                       | Lists the metric definitions for the resource. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-01-01/examples/GetMetricDefinitionsApplicationInsights.json                                                                                                                                                                                                                                                                                                                                  |
| [metricNamespacesListSample.js][metricnamespaceslistsample]                                                         | Lists the metric namespaces for the resource. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2017-12-01-preview/examples/GetMetricNamespaces.json                                                                                                                                                                                                                                                                                                                                              |
| [metricsListSample.js][metricslistsample]                                                                           | **Lists the metric values for a resource**. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-01-01/examples/GetMetric.json                                                                                                                                                                                                                                                                                                                                                                   |
| [operationsListSample.js][operationslistsample]                                                                     | Lists all of the available operations from Microsoft.Insights provider. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/OperationList.json                                                                                                                                                                                                                                                                                                                                   |
| [privateEndpointConnectionsCreateOrUpdateSample.js][privateendpointconnectionscreateorupdatesample]                 | Approve or reject a private endpoint connection with a given name. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateEndpointConnectionUpdate.json                                                                                                                                                                                                                                                                                                             |
| [privateEndpointConnectionsDeleteSample.js][privateendpointconnectionsdeletesample]                                 | Deletes a private endpoint connection with a given name. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateEndpointConnectionDelete.json                                                                                                                                                                                                                                                                                                                       |
| [privateEndpointConnectionsGetSample.js][privateendpointconnectionsgetsample]                                       | Gets a private endpoint connection. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateEndpointConnectionGet.json                                                                                                                                                                                                                                                                                                                                               |
| [privateEndpointConnectionsListByPrivateLinkScopeSample.js][privateendpointconnectionslistbyprivatelinkscopesample] | Gets all private endpoint connections on a private link scope. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateEndpointConnectionList.json                                                                                                                                                                                                                                                                                                                   |
| [privateLinkResourcesGetSample.js][privatelinkresourcesgetsample]                                                   | Gets the private link resources that need to be created for a Azure Monitor PrivateLinkScope. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopePrivateLinkResourceGet.json                                                                                                                                                                                                                                                                           |
| [privateLinkResourcesListByPrivateLinkScopeSample.js][privatelinkresourceslistbyprivatelinkscopesample]             | Gets the private link resources that need to be created for a Azure Monitor PrivateLinkScope. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopePrivateLinkResourceListGet.json                                                                                                                                                                                                                                                                       |
| [privateLinkScopeOperationStatusGetSample.js][privatelinkscopeoperationstatusgetsample]                             | Get the status of an azure asynchronous operation associated with a private link scope operation. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/privateLinkScopeOperationStatuses.json                                                                                                                                                                                                                                                                            |
| [privateLinkScopedResourcesCreateOrUpdateSample.js][privatelinkscopedresourcescreateorupdatesample]                 | Approve or reject a private endpoint connection with a given name. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopedResourceUpdate.json                                                                                                                                                                                                                                                                                                             |
| [privateLinkScopedResourcesDeleteSample.js][privatelinkscopedresourcesdeletesample]                                 | Deletes a private endpoint connection with a given name. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopedResourceDelete.json                                                                                                                                                                                                                                                                                                                       |
| [privateLinkScopedResourcesGetSample.js][privatelinkscopedresourcesgetsample]                                       | Gets a scoped resource in a private link scope. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopedResourceGet.json                                                                                                                                                                                                                                                                                                                                   |
| [privateLinkScopedResourcesListByPrivateLinkScopeSample.js][privatelinkscopedresourceslistbyprivatelinkscopesample] | Gets all private endpoint connections on a private link scope. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopedResourceList.json                                                                                                                                                                                                                                                                                                                   |
| [privateLinkScopesCreateOrUpdateSample.js][privatelinkscopescreateorupdatesample]                                   | Creates (or updates) a Azure Monitor PrivateLinkScope. Note: You cannot specify a different value for InstrumentationKey nor AppId in the Put operation. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopesCreate.json                                                                                                                                                                                                                               |
| [privateLinkScopesDeleteSample.js][privatelinkscopesdeletesample]                                                   | Deletes a Azure Monitor PrivateLinkScope. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopesDelete.json                                                                                                                                                                                                                                                                                                                                              |
| [privateLinkScopesGetSample.js][privatelinkscopesgetsample]                                                         | Returns a Azure Monitor PrivateLinkScope. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopesGet.json                                                                                                                                                                                                                                                                                                                                                 |
| [privateLinkScopesListByResourceGroupSample.js][privatelinkscopeslistbyresourcegroupsample]                         | Gets a list of Azure Monitor PrivateLinkScopes within a resource group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopesListByResourceGroup.json                                                                                                                                                                                                                                                                                                   |
| [privateLinkScopesListSample.js][privatelinkscopeslistsample]                                                       | Gets a list of all Azure Monitor PrivateLinkScopes within a subscription. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopesList.json                                                                                                                                                                                                                                                                                                                |
| [privateLinkScopesUpdateTagsSample.js][privatelinkscopesupdatetagssample]                                           | Updates an existing PrivateLinkScope's tags. To update other fields use the CreateOrUpdate method. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopesUpdateTagsOnly.json                                                                                                                                                                                                                                                                             |
| [scheduledQueryRulesCreateOrUpdateSample.js][scheduledqueryrulescreateorupdatesample]                               | Creates or updates an log search rule. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-04-16/examples/createOrUpdateScheduledQueryRules.json                                                                                                                                                                                                                                                                                                                                                |
| [scheduledQueryRulesDeleteSample.js][scheduledqueryrulesdeletesample]                                               | Deletes a Log Search rule x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-04-16/examples/deleteScheduledQueryRules.json                                                                                                                                                                                                                                                                                                                                                                     |
| [scheduledQueryRulesGetSample.js][scheduledqueryrulesgetsample]                                                     | Gets an Log Search rule x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-04-16/examples/getScheduledQueryRules.json                                                                                                                                                                                                                                                                                                                                                                          |
| [scheduledQueryRulesListByResourceGroupSample.js][scheduledqueryruleslistbyresourcegroupsample]                     | List the Log Search rules within a resource group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-04-16/examples/listScheduledQueryRules.json                                                                                                                                                                                                                                                                                                                                              |
| [scheduledQueryRulesListBySubscriptionSample.js][scheduledqueryruleslistbysubscriptionsample]                       | List the Log Search rules within a subscription group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-04-16/examples/listScheduledQueryRules.json                                                                                                                                                                                                                                                                                                                                          |
| [scheduledQueryRulesUpdateSample.js][scheduledqueryrulesupdatesample]                                               | Update log search Rule. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-04-16/examples/patchScheduledQueryRules.json                                                                                                                                                                                                                                                                                                                                                                        |
| [tenantActivityLogsListSample.js][tenantactivitylogslistsample]                                                     | Gets the Activity Logs for the Tenant.<br>Everything that is applicable to the API to get the Activity Logs for the subscription is applicable to this API (the parameters, $filter, etc.).<br>One thing to point out here is that this API does _not_ retrieve the logs at the individual subscription of the tenant but only surfaces the logs that were generated at the tenant level. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/GetTenantActivityLogsFiltered.json |
| [vmInsightsGetOnboardingStatusSample.js][vminsightsgetonboardingstatussample]                                       | Retrieves the VM Insights onboarding status for the specified resource or resource scope. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2018-11-27-preview/examples/getOnboardingStatusVMScaleSet.json                                                                                                                                                                                                                                                                                        |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://nodejs.org/about/releases/).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node actionGroupsCreateOrUpdateSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env  node actionGroupsCreateOrUpdateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[actiongroupscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/actionGroupsCreateOrUpdateSample.js
[actiongroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/actionGroupsDeleteSample.js
[actiongroupsenablereceiversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/actionGroupsEnableReceiverSample.js
[actiongroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/actionGroupsGetSample.js
[actiongroupsgettestnotificationssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/actionGroupsGetTestNotificationsSample.js
[actiongroupslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/actionGroupsListByResourceGroupSample.js
[actiongroupslistbysubscriptionidsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/actionGroupsListBySubscriptionIdSample.js
[actiongroupsposttestnotificationssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/actionGroupsPostTestNotificationsSample.js
[actiongroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/actionGroupsUpdateSample.js
[activitylogalertscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/activityLogAlertsCreateOrUpdateSample.js
[activitylogalertsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/activityLogAlertsDeleteSample.js
[activitylogalertsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/activityLogAlertsGetSample.js
[activitylogalertslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/activityLogAlertsListByResourceGroupSample.js
[activitylogalertslistbysubscriptionidsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/activityLogAlertsListBySubscriptionIdSample.js
[activitylogalertsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/activityLogAlertsUpdateSample.js
[activitylogslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/activityLogsListSample.js
[alertruleincidentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/alertRuleIncidentsGetSample.js
[alertruleincidentslistbyalertrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/alertRuleIncidentsListByAlertRuleSample.js
[alertrulescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/alertRulesCreateOrUpdateSample.js
[alertrulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/alertRulesDeleteSample.js
[alertrulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/alertRulesGetSample.js
[alertruleslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/alertRulesListByResourceGroupSample.js
[alertruleslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/alertRulesListBySubscriptionSample.js
[alertrulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/alertRulesUpdateSample.js
[autoscalesettingscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/autoscaleSettingsCreateOrUpdateSample.js
[autoscalesettingsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/autoscaleSettingsDeleteSample.js
[autoscalesettingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/autoscaleSettingsGetSample.js
[autoscalesettingslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/autoscaleSettingsListByResourceGroupSample.js
[autoscalesettingslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/autoscaleSettingsListBySubscriptionSample.js
[autoscalesettingsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/autoscaleSettingsUpdateSample.js
[baselineslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/baselinesListSample.js
[datacollectionendpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/dataCollectionEndpointsCreateSample.js
[datacollectionendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/dataCollectionEndpointsDeleteSample.js
[datacollectionendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/dataCollectionEndpointsGetSample.js
[datacollectionendpointslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/dataCollectionEndpointsListByResourceGroupSample.js
[datacollectionendpointslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/dataCollectionEndpointsListBySubscriptionSample.js
[datacollectionendpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/dataCollectionEndpointsUpdateSample.js
[datacollectionruleassociationscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/dataCollectionRuleAssociationsCreateSample.js
[datacollectionruleassociationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/dataCollectionRuleAssociationsDeleteSample.js
[datacollectionruleassociationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/dataCollectionRuleAssociationsGetSample.js
[datacollectionruleassociationslistbyresourcesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/dataCollectionRuleAssociationsListByResourceSample.js
[datacollectionruleassociationslistbyrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/dataCollectionRuleAssociationsListByRuleSample.js
[datacollectionrulescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/dataCollectionRulesCreateSample.js
[datacollectionrulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/dataCollectionRulesDeleteSample.js
[datacollectionrulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/dataCollectionRulesGetSample.js
[datacollectionruleslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/dataCollectionRulesListByResourceGroupSample.js
[datacollectionruleslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/dataCollectionRulesListBySubscriptionSample.js
[datacollectionrulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/dataCollectionRulesUpdateSample.js
[diagnosticsettingscategorygetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/diagnosticSettingsCategoryGetSample.js
[diagnosticsettingscategorylistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/diagnosticSettingsCategoryListSample.js
[diagnosticsettingscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/diagnosticSettingsCreateOrUpdateSample.js
[diagnosticsettingsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/diagnosticSettingsDeleteSample.js
[diagnosticsettingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/diagnosticSettingsGetSample.js
[diagnosticsettingslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/diagnosticSettingsListSample.js
[eventcategorieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/eventCategoriesListSample.js
[logprofilescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/logProfilesCreateOrUpdateSample.js
[logprofilesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/logProfilesDeleteSample.js
[logprofilesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/logProfilesGetSample.js
[logprofileslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/logProfilesListSample.js
[logprofilesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/logProfilesUpdateSample.js
[metricalertscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/metricAlertsCreateOrUpdateSample.js
[metricalertsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/metricAlertsDeleteSample.js
[metricalertsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/metricAlertsGetSample.js
[metricalertslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/metricAlertsListByResourceGroupSample.js
[metricalertslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/metricAlertsListBySubscriptionSample.js
[metricalertsstatuslistbynamesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/metricAlertsStatusListByNameSample.js
[metricalertsstatuslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/metricAlertsStatusListSample.js
[metricalertsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/metricAlertsUpdateSample.js
[metricdefinitionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/metricDefinitionsListSample.js
[metricnamespaceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/metricNamespacesListSample.js
[metricslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/metricsListSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/operationsListSample.js
[privateendpointconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/privateEndpointConnectionsCreateOrUpdateSample.js
[privateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/privateEndpointConnectionsDeleteSample.js
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/privateEndpointConnectionsGetSample.js
[privateendpointconnectionslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/privateEndpointConnectionsListByPrivateLinkScopeSample.js
[privatelinkresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/privateLinkResourcesGetSample.js
[privatelinkresourceslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/privateLinkResourcesListByPrivateLinkScopeSample.js
[privatelinkscopeoperationstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/privateLinkScopeOperationStatusGetSample.js
[privatelinkscopedresourcescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/privateLinkScopedResourcesCreateOrUpdateSample.js
[privatelinkscopedresourcesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/privateLinkScopedResourcesDeleteSample.js
[privatelinkscopedresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/privateLinkScopedResourcesGetSample.js
[privatelinkscopedresourceslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/privateLinkScopedResourcesListByPrivateLinkScopeSample.js
[privatelinkscopescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/privateLinkScopesCreateOrUpdateSample.js
[privatelinkscopesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/privateLinkScopesDeleteSample.js
[privatelinkscopesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/privateLinkScopesGetSample.js
[privatelinkscopeslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/privateLinkScopesListByResourceGroupSample.js
[privatelinkscopeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/privateLinkScopesListSample.js
[privatelinkscopesupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/privateLinkScopesUpdateTagsSample.js
[scheduledqueryrulescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/scheduledQueryRulesCreateOrUpdateSample.js
[scheduledqueryrulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/scheduledQueryRulesDeleteSample.js
[scheduledqueryrulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/scheduledQueryRulesGetSample.js
[scheduledqueryruleslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/scheduledQueryRulesListByResourceGroupSample.js
[scheduledqueryruleslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/scheduledQueryRulesListBySubscriptionSample.js
[scheduledqueryrulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/scheduledQueryRulesUpdateSample.js
[tenantactivitylogslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/tenantActivityLogsListSample.js
[vminsightsgetonboardingstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/javascript/vmInsightsGetOnboardingStatusSample.js
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-monitor?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/monitor/arm-monitor/README.md
