sdk/monitor/arm-monitor/samples/v8/javascript/README.md
# @azure/arm-monitor client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-monitor in some common scenarios.

| **File Name**                                                                                                                           | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| --------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [actionGroupsCreateNotificationsAtActionGroupResourceLevelSample.js][actiongroupscreatenotificationsatactiongroupresourcelevelsample]   | send test notifications to a set of provided receivers x-ms-original-file: 2024-10-01-preview/postTestNotificationsAtActionGroupResourceLevel.json                                                                                                                                                                                                                                                                                                          |
| [actionGroupsCreateOrUpdateSample.js][actiongroupscreateorupdatesample]                                                                 | create a new action group or update an existing one. x-ms-original-file: 2024-10-01-preview/createOrUpdateActionGroup.json                                                                                                                                                                                                                                                                                                                                  |
| [actionGroupsDeleteSample.js][actiongroupsdeletesample]                                                                                 | delete an action group. x-ms-original-file: 2024-10-01-preview/deleteActionGroup.json                                                                                                                                                                                                                                                                                                                                                                       |
| [actionGroupsEnableReceiverSample.js][actiongroupsenablereceiversample]                                                                 | enable a receiver in an action group. This changes the receiver's status from Disabled to Enabled. This operation is only supported for Email or SMS receivers. x-ms-original-file: 2024-10-01-preview/enableReceiver.json                                                                                                                                                                                                                                  |
| [actionGroupsGetNSPSample.js][actiongroupsgetnspsample]                                                                                 | gets a specified NSP configuration for specified action group. x-ms-original-file: 2021-10-01/NSPForActionGroups_Get.json                                                                                                                                                                                                                                                                                                                                   |
| [actionGroupsGetSample.js][actiongroupsgetsample]                                                                                       | get an action group. x-ms-original-file: 2024-10-01-preview/getActionGroup.json                                                                                                                                                                                                                                                                                                                                                                             |
| [actionGroupsGetTestNotificationsAtActionGroupResourceLevelSample.js][actiongroupsgettestnotificationsatactiongroupresourcelevelsample] | get the test notifications by the notification id x-ms-original-file: 2024-10-01-preview/getTestNotificationsAtActionGroupResourceLevel.json                                                                                                                                                                                                                                                                                                                |
| [actionGroupsListByResourceGroupSample.js][actiongroupslistbyresourcegroupsample]                                                       | get a list of all action groups in a resource group. x-ms-original-file: 2024-10-01-preview/listActionGroupsByResourceGroup.json                                                                                                                                                                                                                                                                                                                            |
| [actionGroupsListBySubscriptionIdSample.js][actiongroupslistbysubscriptionidsample]                                                     | get a list of all action groups in a subscription. x-ms-original-file: 2024-10-01-preview/listActionGroups.json                                                                                                                                                                                                                                                                                                                                             |
| [actionGroupsListNSPSample.js][actiongroupslistnspsample]                                                                               | gets a list of NSP configurations for specified action group. x-ms-original-file: 2021-10-01/NSPForActionGroups_List.json                                                                                                                                                                                                                                                                                                                                   |
| [actionGroupsReconcileNSPSample.js][actiongroupsreconcilenspsample]                                                                     | reconciles a specified NSP configuration for specified action group. x-ms-original-file: 2021-10-01/NSPForActionGroups_Reconcile.json                                                                                                                                                                                                                                                                                                                       |
| [actionGroupsUpdateSample.js][actiongroupsupdatesample]                                                                                 | updates an existing action group's tags. To update other fields use the CreateOrUpdate method. x-ms-original-file: 2024-10-01-preview/patchActionGroup.json                                                                                                                                                                                                                                                                                                 |
| [activityLogAlertsCreateOrUpdateSample.js][activitylogalertscreateorupdatesample]                                                       | create a new Activity Log Alert rule or update an existing one. x-ms-original-file: 2023-01-01-preview/ActivityLogAlertRule_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                             |
| [activityLogAlertsDeleteSample.js][activitylogalertsdeletesample]                                                                       | delete an Activity Log Alert rule. x-ms-original-file: 2023-01-01-preview/ActivityLogAlertRule_Delete.json                                                                                                                                                                                                                                                                                                                                                  |
| [activityLogAlertsGetSample.js][activitylogalertsgetsample]                                                                             | get an Activity Log Alert rule. x-ms-original-file: 2023-01-01-preview/ActivityLogAlertRule_Get.json                                                                                                                                                                                                                                                                                                                                                        |
| [activityLogAlertsListByResourceGroupSample.js][activitylogalertslistbyresourcegroupsample]                                             | get a list of all Activity Log Alert rules in a resource group. x-ms-original-file: 2023-01-01-preview/ActivityLogAlertRule_ListByResourceGroupName.json                                                                                                                                                                                                                                                                                                    |
| [activityLogAlertsListBySubscriptionIdSample.js][activitylogalertslistbysubscriptionidsample]                                           | get a list of all Activity Log Alert rules in a subscription. x-ms-original-file: 2023-01-01-preview/ActivityLogAlertRule_ListBySubscriptionId.json                                                                                                                                                                                                                                                                                                         |
| [activityLogAlertsUpdateSample.js][activitylogalertsupdatesample]                                                                       | updates 'tags' and 'enabled' fields in an existing Alert rule. This method is used to update the Alert rule tags, and to enable or disable the Alert rule. To update other fields use CreateOrUpdate operation. x-ms-original-file: 2023-01-01-preview/ActivityLogAlertRule_Update.json                                                                                                                                                                     |
| [activityLogsListSample.js][activitylogslistsample]                                                                                     | provides the list of records from the activity logs. x-ms-original-file: 2015-04-01/GetActivityLogsFiltered.json                                                                                                                                                                                                                                                                                                                                            |
| [alertRuleIncidentsGetSample.js][alertruleincidentsgetsample]                                                                           | gets an incident associated to an alert rule x-ms-original-file: 2016-03-01/getAlertRuleIncident.json                                                                                                                                                                                                                                                                                                                                                       |
| [alertRuleIncidentsListByAlertRuleSample.js][alertruleincidentslistbyalertrulesample]                                                   | gets a list of incidents associated to an alert rule x-ms-original-file: 2016-03-01/listAlertRuleIncidents.json                                                                                                                                                                                                                                                                                                                                             |
| [autoscaleSettingsCreateOrUpdateSample.js][autoscalesettingscreateorupdatesample]                                                       | creates or updates an autoscale setting. x-ms-original-file: 2022-10-01/createOrUpdateAutoscaleSetting.json                                                                                                                                                                                                                                                                                                                                                 |
| [autoscaleSettingsDeleteSample.js][autoscalesettingsdeletesample]                                                                       | deletes and autoscale setting x-ms-original-file: 2022-10-01/deleteAutoscaleSetting.json                                                                                                                                                                                                                                                                                                                                                                    |
| [autoscaleSettingsGetSample.js][autoscalesettingsgetsample]                                                                             | gets an autoscale setting x-ms-original-file: 2022-10-01/getAutoscaleSetting.json                                                                                                                                                                                                                                                                                                                                                                           |
| [autoscaleSettingsListByResourceGroupSample.js][autoscalesettingslistbyresourcegroupsample]                                             | lists the autoscale settings for a resource group x-ms-original-file: 2022-10-01/listAutoscaleSetting.json                                                                                                                                                                                                                                                                                                                                                  |
| [autoscaleSettingsListBySubscriptionSample.js][autoscalesettingslistbysubscriptionsample]                                               | lists the autoscale settings for a subscription x-ms-original-file: 2022-10-01/listAutoscaleSettingBySubscription.json                                                                                                                                                                                                                                                                                                                                      |
| [autoscaleSettingsUpdateSample.js][autoscalesettingsupdatesample]                                                                       | updates an existing AutoscaleSettingsResource. To update other fields use the CreateOrUpdate method. x-ms-original-file: 2022-10-01/patchAutoscaleSetting.json                                                                                                                                                                                                                                                                                              |
| [baselinesListSample.js][baselineslistsample]                                                                                           | **Lists the metric baseline values for a resource**. x-ms-original-file: 2019-03-01/metricBaselines.json                                                                                                                                                                                                                                                                                                                                                    |
| [createNotificationsAtTenantActionGroupResourceLevelSample.js][createnotificationsattenantactiongroupresourcelevelsample]               | send test notifications to a set of provided receivers x-ms-original-file: 2023-05-01-preview/postTestNotificationsAtTenantActionGroupResourceLevel.json                                                                                                                                                                                                                                                                                                    |
| [dataCollectionEndpointsCreateSample.js][datacollectionendpointscreatesample]                                                           | creates or updates a data collection endpoint. x-ms-original-file: 2024-03-11/DataCollectionEndpointsCreate.json                                                                                                                                                                                                                                                                                                                                            |
| [dataCollectionEndpointsDeleteSample.js][datacollectionendpointsdeletesample]                                                           | deletes a data collection endpoint. x-ms-original-file: 2024-03-11/DataCollectionEndpointsDelete.json                                                                                                                                                                                                                                                                                                                                                       |
| [dataCollectionEndpointsGetNSPSample.js][datacollectionendpointsgetnspsample]                                                           | gets the specified NSP configuration for the specified data collection endpoint. x-ms-original-file: 2021-10-01/NSPForDataCollectionEndpoints_Get.json                                                                                                                                                                                                                                                                                                      |
| [dataCollectionEndpointsGetSample.js][datacollectionendpointsgetsample]                                                                 | returns the specified data collection endpoint. x-ms-original-file: 2024-03-11/DataCollectionEndpointsGet.json                                                                                                                                                                                                                                                                                                                                              |
| [dataCollectionEndpointsListByResourceGroupSample.js][datacollectionendpointslistbyresourcegroupsample]                                 | lists all data collection endpoints in the specified resource group. x-ms-original-file: 2024-03-11/DataCollectionEndpointsListByResourceGroup.json                                                                                                                                                                                                                                                                                                         |
| [dataCollectionEndpointsListBySubscriptionSample.js][datacollectionendpointslistbysubscriptionsample]                                   | lists all data collection endpoints in the specified subscription x-ms-original-file: 2024-03-11/DataCollectionEndpointsListBySubscription.json                                                                                                                                                                                                                                                                                                             |
| [dataCollectionEndpointsListNSPSample.js][datacollectionendpointslistnspsample]                                                         | gets a list of NSP configurations for the specified data collection endpoint. x-ms-original-file: 2021-10-01/NSPForDataCollectionEndpoints_List.json                                                                                                                                                                                                                                                                                                        |
| [dataCollectionEndpointsReconcileNSPSample.js][datacollectionendpointsreconcilenspsample]                                               | reconciles the specified NSP configuration for the specified data collection endpoint. x-ms-original-file: 2021-10-01/NSPForDataCollectionEndpoints_Reconcile.json                                                                                                                                                                                                                                                                                          |
| [dataCollectionEndpointsUpdateSample.js][datacollectionendpointsupdatesample]                                                           | updates part of a data collection endpoint. x-ms-original-file: 2024-03-11/DataCollectionEndpointsPatch.json                                                                                                                                                                                                                                                                                                                                                |
| [dataCollectionRuleAssociationsCreateSample.js][datacollectionruleassociationscreatesample]                                             | creates or updates an association. x-ms-original-file: 2024-03-11/DataCollectionRuleAssociationsCreate.json                                                                                                                                                                                                                                                                                                                                                 |
| [dataCollectionRuleAssociationsDeleteSample.js][datacollectionruleassociationsdeletesample]                                             | deletes an association. x-ms-original-file: 2024-03-11/DataCollectionRuleAssociationsDelete.json                                                                                                                                                                                                                                                                                                                                                            |
| [dataCollectionRuleAssociationsGetSample.js][datacollectionruleassociationsgetsample]                                                   | returns the specified association. x-ms-original-file: 2024-03-11/DataCollectionRuleAssociationsGet.json                                                                                                                                                                                                                                                                                                                                                    |
| [dataCollectionRuleAssociationsListByDataCollectionEndpointSample.js][datacollectionruleassociationslistbydatacollectionendpointsample] | lists associations for the specified data collection endpoint. x-ms-original-file: 2024-03-11/DataCollectionRuleAssociationsListByDataCollectionEndpoint.json                                                                                                                                                                                                                                                                                               |
| [dataCollectionRuleAssociationsListByResourceSample.js][datacollectionruleassociationslistbyresourcesample]                             | lists associations for the specified resource. x-ms-original-file: 2024-03-11/DataCollectionRuleAssociationsListByResource.json                                                                                                                                                                                                                                                                                                                             |
| [dataCollectionRuleAssociationsListByRuleSample.js][datacollectionruleassociationslistbyrulesample]                                     | lists associations for the specified data collection rule. x-ms-original-file: 2024-03-11/DataCollectionRuleAssociationsListByRule.json                                                                                                                                                                                                                                                                                                                     |
| [dataCollectionRulesCreateSample.js][datacollectionrulescreatesample]                                                                   | creates or updates a data collection rule. x-ms-original-file: 2024-03-11/DataCollectionRulesCreate.json                                                                                                                                                                                                                                                                                                                                                    |
| [dataCollectionRulesDeleteSample.js][datacollectionrulesdeletesample]                                                                   | deletes a data collection rule. x-ms-original-file: 2024-03-11/DataCollectionRulesDelete.json                                                                                                                                                                                                                                                                                                                                                               |
| [dataCollectionRulesGetSample.js][datacollectionrulesgetsample]                                                                         | returns the specified data collection rule. x-ms-original-file: 2024-03-11/DataCollectionRulesGet.json                                                                                                                                                                                                                                                                                                                                                      |
| [dataCollectionRulesListByResourceGroupSample.js][datacollectionruleslistbyresourcegroupsample]                                         | lists all data collection rules in the specified resource group. x-ms-original-file: 2024-03-11/DataCollectionRulesListByResourceGroup.json                                                                                                                                                                                                                                                                                                                 |
| [dataCollectionRulesListBySubscriptionSample.js][datacollectionruleslistbysubscriptionsample]                                           | lists all data collection rules in the specified subscription. x-ms-original-file: 2024-03-11/DataCollectionRulesListBySubscription.json                                                                                                                                                                                                                                                                                                                    |
| [dataCollectionRulesUpdateSample.js][datacollectionrulesupdatesample]                                                                   | updates part of a data collection rule. x-ms-original-file: 2024-03-11/DataCollectionRulesUpdate.json                                                                                                                                                                                                                                                                                                                                                       |
| [diagnosticSettingsCategoryGetSample.js][diagnosticsettingscategorygetsample]                                                           | gets the diagnostic settings category for the specified resource. x-ms-original-file: 2021-05-01-preview/getDiagnosticSettingsCategory.json                                                                                                                                                                                                                                                                                                                 |
| [diagnosticSettingsCategoryListSample.js][diagnosticsettingscategorylistsample]                                                         | lists the diagnostic settings categories for the specified resource. x-ms-original-file: 2021-05-01-preview/listDiagnosticSettingsCategories.json                                                                                                                                                                                                                                                                                                           |
| [diagnosticSettingsCreateOrUpdateSample.js][diagnosticsettingscreateorupdatesample]                                                     | creates or updates diagnostic settings for the specified resource. x-ms-original-file: 2021-05-01-preview/createOrUpdateDiagnosticSetting.json                                                                                                                                                                                                                                                                                                              |
| [diagnosticSettingsDeleteSample.js][diagnosticsettingsdeletesample]                                                                     | deletes existing diagnostic settings for the specified resource. x-ms-original-file: 2021-05-01-preview/deleteDiagnosticSetting.json                                                                                                                                                                                                                                                                                                                        |
| [diagnosticSettingsGetSample.js][diagnosticsettingsgetsample]                                                                           | gets the active diagnostic settings for the specified resource. x-ms-original-file: 2021-05-01-preview/getDiagnosticSetting.json                                                                                                                                                                                                                                                                                                                            |
| [diagnosticSettingsListSample.js][diagnosticsettingslistsample]                                                                         | gets the active diagnostic settings list for the specified resource. x-ms-original-file: 2021-05-01-preview/listDiagnosticSettings.json                                                                                                                                                                                                                                                                                                                     |
| [eventCategoriesListSample.js][eventcategorieslistsample]                                                                               | get the list of available event categories supported in the Activity Logs Service.<br>The current list includes the following: Administrative, Security, ServiceHealth, Alert, Recommendation, Policy. x-ms-original-file: 2015-04-01/GetEventCategories.json                                                                                                                                                                                               |
| [getTestNotificationsAtTenantActionGroupResourceLevelSample.js][gettestnotificationsattenantactiongroupresourcelevelsample]             | get the test notifications by the notification id x-ms-original-file: 2023-05-01-preview/getTestNotificationsAtTenantActionGroupResourceLevel.json                                                                                                                                                                                                                                                                                                          |
| [logProfilesCreateOrUpdateSample.js][logprofilescreateorupdatesample]                                                                   | create or update a log profile in Azure Monitoring REST API. x-ms-original-file: 2016-03-01/createOrUpdateLogProfile.json                                                                                                                                                                                                                                                                                                                                   |
| [logProfilesDeleteSample.js][logprofilesdeletesample]                                                                                   | deletes the log profile. x-ms-original-file: 2016-03-01/deleteLogProfile.json                                                                                                                                                                                                                                                                                                                                                                               |
| [logProfilesGetSample.js][logprofilesgetsample]                                                                                         | gets the log profile. x-ms-original-file: 2016-03-01/getLogProfile.json                                                                                                                                                                                                                                                                                                                                                                                     |
| [logProfilesListSample.js][logprofileslistsample]                                                                                       | list the log profiles. x-ms-original-file: 2016-03-01/listLogProfile.json                                                                                                                                                                                                                                                                                                                                                                                   |
| [logProfilesUpdateSample.js][logprofilesupdatesample]                                                                                   | updates an existing LogProfilesResource. To update other fields use the CreateOrUpdate method. x-ms-original-file: 2016-03-01/patchLogProfile.json                                                                                                                                                                                                                                                                                                          |
| [metricAlertsCreateOrUpdateSample.js][metricalertscreateorupdatesample]                                                                 | create or update an metric alert definition. x-ms-original-file: 2026-01-01/createOrUpdateDynamicMetricAlertMultipleResource.json                                                                                                                                                                                                                                                                                                                           |
| [metricAlertsDeleteSample.js][metricalertsdeletesample]                                                                                 | delete an alert rule definition. x-ms-original-file: 2026-01-01/deleteMetricAlert.json                                                                                                                                                                                                                                                                                                                                                                      |
| [metricAlertsGetSample.js][metricalertsgetsample]                                                                                       | retrieve an alert rule definition. x-ms-original-file: 2026-01-01/getDynamicMetricAlertMultipleResource.json                                                                                                                                                                                                                                                                                                                                                |
| [metricAlertsListByResourceGroupSample.js][metricalertslistbyresourcegroupsample]                                                       | retrieve alert rule definitions in a resource group. x-ms-original-file: 2026-01-01/listByResourceGroupMetricAlert.json                                                                                                                                                                                                                                                                                                                                     |
| [metricAlertsListBySubscriptionSample.js][metricalertslistbysubscriptionsample]                                                         | retrieve alert rule definitions in a subscription. x-ms-original-file: 2026-01-01/listMetricAlert.json                                                                                                                                                                                                                                                                                                                                                      |
| [metricAlertsStatusListByNameSample.js][metricalertsstatuslistbynamesample]                                                             | retrieve an alert rule status. x-ms-original-file: 2026-01-01/getMetricAlertStatusByName.json                                                                                                                                                                                                                                                                                                                                                               |
| [metricAlertsStatusListSample.js][metricalertsstatuslistsample]                                                                         | retrieve an alert rule status. x-ms-original-file: 2026-01-01/getMetricAlertStatus.json                                                                                                                                                                                                                                                                                                                                                                     |
| [metricAlertsUpdateSample.js][metricalertsupdatesample]                                                                                 | update an metric alert definition. x-ms-original-file: 2026-01-01/UpdateMetricAlert.json                                                                                                                                                                                                                                                                                                                                                                    |
| [metricDefinitionsListAtSubscriptionScopeSample.js][metricdefinitionslistatsubscriptionscopesample]                                     | lists the metric definitions for the subscription. x-ms-original-file: 2024-02-01/GetMultiResourceMetricDefinitions.json                                                                                                                                                                                                                                                                                                                                    |
| [metricDefinitionsListSample.js][metricdefinitionslistsample]                                                                           | lists the metric definitions for the resource. x-ms-original-file: 2024-02-01/GetMetricDefinitions.json                                                                                                                                                                                                                                                                                                                                                     |
| [metricNamespacesListSample.js][metricnamespaceslistsample]                                                                             | lists the metric namespaces for the resource. x-ms-original-file: 2024-02-01/GetMetricNamespaces.json                                                                                                                                                                                                                                                                                                                                                       |
| [metricsListAtSubscriptionScopePostSample.js][metricslistatsubscriptionscopepostsample]                                                 | **Lists the metric data for a subscription**. Parameters can be specified on either query params or the body. This API used the [default ARM throttling limits](https://learn.microsoft.com/en-us/azure/azure-resource-manager/management/request-limits-and-throttling). x-ms-original-file: 2024-02-01/PostMultiResourceMetric.json                                                                                                                       |
| [metricsListAtSubscriptionScopeSample.js][metricslistatsubscriptionscopesample]                                                         | **Lists the metric data for a subscription**. This API used the [default ARM throttling limits](https://learn.microsoft.com/en-us/azure/azure-resource-manager/management/request-limits-and-throttling). x-ms-original-file: 2024-02-01/GetMultiResourceMetric.json                                                                                                                                                                                        |
| [metricsListSample.js][metricslistsample]                                                                                               | **Lists the metric values for a resource**. This API used the [default ARM throttling limits](https://learn.microsoft.com/en-us/azure/azure-resource-manager/management/request-limits-and-throttling). x-ms-original-file: 2024-02-01/GetMetric.json                                                                                                                                                                                                       |
| [predictiveMetricGetSample.js][predictivemetricgetsample]                                                                               | get predictive autoscale metric future data x-ms-original-file: 2022-10-01/GetPredictiveMetric.json                                                                                                                                                                                                                                                                                                                                                         |
| [privateEndpointConnectionsCreateOrUpdateSample.js][privateendpointconnectionscreateorupdatesample]                                     | approve or reject a private endpoint connection with a given name. x-ms-original-file: 2023-06-01-preview/PrivateEndpointConnectionUpdate.json                                                                                                                                                                                                                                                                                                              |
| [privateEndpointConnectionsDeleteSample.js][privateendpointconnectionsdeletesample]                                                     | deletes a private endpoint connection with a given name. x-ms-original-file: 2023-06-01-preview/PrivateEndpointConnectionDelete.json                                                                                                                                                                                                                                                                                                                        |
| [privateEndpointConnectionsGetSample.js][privateendpointconnectionsgetsample]                                                           | gets a private endpoint connection. x-ms-original-file: 2023-06-01-preview/PrivateEndpointConnectionGet.json                                                                                                                                                                                                                                                                                                                                                |
| [privateEndpointConnectionsListByPrivateLinkScopeSample.js][privateendpointconnectionslistbyprivatelinkscopesample]                     | gets all private endpoint connections on a private link scope. x-ms-original-file: 2023-06-01-preview/PrivateEndpointConnectionList.json                                                                                                                                                                                                                                                                                                                    |
| [privateLinkResourcesGetSample.js][privatelinkresourcesgetsample]                                                                       | gets the private link resources that need to be created for a Azure Monitor PrivateLinkScope. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopePrivateLinkResourceGet.json                                                                                                                                                                                                                                                                            |
| [privateLinkResourcesListByPrivateLinkScopeSample.js][privatelinkresourceslistbyprivatelinkscopesample]                                 | gets the private link resources that need to be created for a Azure Monitor PrivateLinkScope. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopePrivateLinkResourceListGet.json                                                                                                                                                                                                                                                                        |
| [privateLinkScopeOperationStatusGetSample.js][privatelinkscopeoperationstatusgetsample]                                                 | get the status of an azure asynchronous operation associated with a private link scope operation. x-ms-original-file: 2023-06-01-preview/privateLinkScopeOperationStatuses.json                                                                                                                                                                                                                                                                             |
| [privateLinkScopedResourcesCreateOrUpdateSample.js][privatelinkscopedresourcescreateorupdatesample]                                     | add an Azure monitor scoped resource in the private link scope. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopedResourceUpdate.json                                                                                                                                                                                                                                                                                                                 |
| [privateLinkScopedResourcesDeleteSample.js][privatelinkscopedresourcesdeletesample]                                                     | deletes an Azure monitor scoped resource with a given name. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopedResourceDelete.json                                                                                                                                                                                                                                                                                                                     |
| [privateLinkScopedResourcesGetSample.js][privatelinkscopedresourcesgetsample]                                                           | gets a scoped resource in a private link scope. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopedResourceGet.json                                                                                                                                                                                                                                                                                                                                    |
| [privateLinkScopedResourcesListByPrivateLinkScopeSample.js][privatelinkscopedresourceslistbyprivatelinkscopesample]                     | gets all scoped resources on a private link scope. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopedResourceList.json                                                                                                                                                                                                                                                                                                                                |
| [privateLinkScopesCreateOrUpdateSample.js][privatelinkscopescreateorupdatesample]                                                       | creates (or updates) a Azure Monitor PrivateLinkScope. Note: You cannot specify a different value for InstrumentationKey nor AppId in the Put operation. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopesCreate.json                                                                                                                                                                                                                                |
| [privateLinkScopesDeleteSample.js][privatelinkscopesdeletesample]                                                                       | deletes a Azure Monitor PrivateLinkScope. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopesDelete.json                                                                                                                                                                                                                                                                                                                                               |
| [privateLinkScopesGetSample.js][privatelinkscopesgetsample]                                                                             | returns a Azure Monitor PrivateLinkScope. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopesGet.json                                                                                                                                                                                                                                                                                                                                                  |
| [privateLinkScopesListByResourceGroupSample.js][privatelinkscopeslistbyresourcegroupsample]                                             | gets a list of Azure Monitor PrivateLinkScopes within a resource group. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopesListByResourceGroup.json                                                                                                                                                                                                                                                                                                    |
| [privateLinkScopesListSample.js][privatelinkscopeslistsample]                                                                           | gets a list of all Azure Monitor PrivateLinkScopes within a subscription. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopesList.json                                                                                                                                                                                                                                                                                                                 |
| [privateLinkScopesUpdateTagsSample.js][privatelinkscopesupdatetagssample]                                                               | updates an existing PrivateLinkScope's tags. To update other fields use the CreateOrUpdate method. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopesUpdateTagsOnly.json                                                                                                                                                                                                                                                                              |
| [scheduledQueryRuleGetNSPSample.js][scheduledqueryrulegetnspsample]                                                                     | gets a network security perimeter configuration. x-ms-original-file: 2021-10-01/NSPForScheduledQueryRule_Get.json                                                                                                                                                                                                                                                                                                                                           |
| [scheduledQueryRuleListNSPSample.js][scheduledqueryrulelistnspsample]                                                                   | gets a list of NSP configurations for specified scheduled query rule. x-ms-original-file: 2021-10-01/NSPForScheduledQueryRule_List.json                                                                                                                                                                                                                                                                                                                     |
| [scheduledQueryRuleReconcileNSPSample.js][scheduledqueryrulereconcilenspsample]                                                         | reconcile network security perimeter configuration for ScheduledQueryRule resource. x-ms-original-file: 2021-10-01/NSPForScheduledQueryRule_Reconcile.json                                                                                                                                                                                                                                                                                                  |
| [scheduledQueryRulesCreateOrUpdateSample.js][scheduledqueryrulescreateorupdatesample]                                                   | creates or updates a scheduled query rule. x-ms-original-file: 2025-01-01-preview/createOrUpdateDynamicThresholdScheduledQueryRule.json                                                                                                                                                                                                                                                                                                                     |
| [scheduledQueryRulesDeleteSample.js][scheduledqueryrulesdeletesample]                                                                   | deletes a scheduled query rule. x-ms-original-file: 2025-01-01-preview/deleteScheduledQueryRule.json                                                                                                                                                                                                                                                                                                                                                        |
| [scheduledQueryRulesGetSample.js][scheduledqueryrulesgetsample]                                                                         | retrieve an scheduled query rule definition. x-ms-original-file: 2025-01-01-preview/getScheduledQueryRule.json                                                                                                                                                                                                                                                                                                                                              |
| [scheduledQueryRulesListByResourceGroupSample.js][scheduledqueryruleslistbyresourcegroupsample]                                         | retrieve scheduled query rule definitions in a resource group. x-ms-original-file: 2025-01-01-preview/listScheduledQueryRulesByResourceGroup.json                                                                                                                                                                                                                                                                                                           |
| [scheduledQueryRulesListBySubscriptionSample.js][scheduledqueryruleslistbysubscriptionsample]                                           | retrieve a scheduled query rule definitions in a subscription. x-ms-original-file: 2025-01-01-preview/listScheduledQueryRulesBySubscription.json                                                                                                                                                                                                                                                                                                            |
| [scheduledQueryRulesUpdateSample.js][scheduledqueryrulesupdatesample]                                                                   | update a scheduled query rule. x-ms-original-file: 2025-01-01-preview/patchScheduledQueryRule.json                                                                                                                                                                                                                                                                                                                                                          |
| [serviceDiagnosticSettingsCreateOrUpdateSample.js][servicediagnosticsettingscreateorupdatesample]                                       | create or update new diagnostic settings for the specified resource. **WARNING**: This method will be deprecated in future releases. x-ms-original-file: 2016-09-01/createOrUpdateServiceDiagnosticSetting.json                                                                                                                                                                                                                                             |
| [serviceDiagnosticSettingsGetSample.js][servicediagnosticsettingsgetsample]                                                             | gets the active diagnostic settings for the specified resource. **WARNING**: This method will be deprecated in future releases. x-ms-original-file: 2016-09-01/getServiceDiagnosticSetting.json                                                                                                                                                                                                                                                             |
| [serviceDiagnosticSettingsUpdateSample.js][servicediagnosticsettingsupdatesample]                                                       | updates an existing ServiceDiagnosticSettingsResource. To update other fields use the CreateOrUpdate method. **WARNING**: This method will be deprecated in future releases. x-ms-original-file: 2016-09-01/updateServiceDiagnosticSetting.json                                                                                                                                                                                                             |
| [tenantActionGroupsCreateOrUpdateSample.js][tenantactiongroupscreateorupdatesample]                                                     | create a new tenant action group or update an existing one. x-ms-original-file: 2023-05-01-preview/createOrUpdateTenantActionGroup.json                                                                                                                                                                                                                                                                                                                     |
| [tenantActionGroupsDeleteSample.js][tenantactiongroupsdeletesample]                                                                     | delete a tenant action group. x-ms-original-file: 2023-05-01-preview/deleteTenantActionGroup.json                                                                                                                                                                                                                                                                                                                                                           |
| [tenantActionGroupsGetSample.js][tenantactiongroupsgetsample]                                                                           | get a tenant action group. x-ms-original-file: 2023-05-01-preview/getTenantActionGroup.json                                                                                                                                                                                                                                                                                                                                                                 |
| [tenantActionGroupsListByManagementGroupIdSample.js][tenantactiongroupslistbymanagementgroupidsample]                                   | get a list of all tenant action groups in a management group. x-ms-original-file: 2023-05-01-preview/listTenantActionGroups.json                                                                                                                                                                                                                                                                                                                            |
| [tenantActionGroupsUpdateSample.js][tenantactiongroupsupdatesample]                                                                     | updates an existing tenant action group's tags. To update other fields use the CreateOrUpdate method. x-ms-original-file: 2023-05-01-preview/patchTenantActionGroup.json                                                                                                                                                                                                                                                                                    |
| [tenantActivityLogsListSample.js][tenantactivitylogslistsample]                                                                         | gets the Activity Logs for the Tenant.<br>Everything that is applicable to the API to get the Activity Logs for the subscription is applicable to this API (the parameters, $filter, etc.).<br>One thing to point out here is that this API does _not_ retrieve the logs at the individual subscription of the tenant but only surfaces the logs that were generated at the tenant level. x-ms-original-file: 2015-04-01/GetTenantActivityLogsFiltered.json |
| [vMInsightsGetOnboardingStatusSample.js][vminsightsgetonboardingstatussample]                                                           | retrieves the VM Insights onboarding status for the specified resource or resource scope. x-ms-original-file: 2018-11-27-preview/getOnboardingStatusResourceGroup.json                                                                                                                                                                                                                                                                                      |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node actionGroupsCreateNotificationsAtActionGroupResourceLevelSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node actionGroupsCreateNotificationsAtActionGroupResourceLevelSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[actiongroupscreatenotificationsatactiongroupresourcelevelsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/actionGroupsCreateNotificationsAtActionGroupResourceLevelSample.js
[actiongroupscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/actionGroupsCreateOrUpdateSample.js
[actiongroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/actionGroupsDeleteSample.js
[actiongroupsenablereceiversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/actionGroupsEnableReceiverSample.js
[actiongroupsgetnspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/actionGroupsGetNSPSample.js
[actiongroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/actionGroupsGetSample.js
[actiongroupsgettestnotificationsatactiongroupresourcelevelsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/actionGroupsGetTestNotificationsAtActionGroupResourceLevelSample.js
[actiongroupslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/actionGroupsListByResourceGroupSample.js
[actiongroupslistbysubscriptionidsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/actionGroupsListBySubscriptionIdSample.js
[actiongroupslistnspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/actionGroupsListNSPSample.js
[actiongroupsreconcilenspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/actionGroupsReconcileNSPSample.js
[actiongroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/actionGroupsUpdateSample.js
[activitylogalertscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/activityLogAlertsCreateOrUpdateSample.js
[activitylogalertsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/activityLogAlertsDeleteSample.js
[activitylogalertsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/activityLogAlertsGetSample.js
[activitylogalertslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/activityLogAlertsListByResourceGroupSample.js
[activitylogalertslistbysubscriptionidsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/activityLogAlertsListBySubscriptionIdSample.js
[activitylogalertsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/activityLogAlertsUpdateSample.js
[activitylogslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/activityLogsListSample.js
[alertruleincidentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/alertRuleIncidentsGetSample.js
[alertruleincidentslistbyalertrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/alertRuleIncidentsListByAlertRuleSample.js
[autoscalesettingscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/autoscaleSettingsCreateOrUpdateSample.js
[autoscalesettingsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/autoscaleSettingsDeleteSample.js
[autoscalesettingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/autoscaleSettingsGetSample.js
[autoscalesettingslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/autoscaleSettingsListByResourceGroupSample.js
[autoscalesettingslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/autoscaleSettingsListBySubscriptionSample.js
[autoscalesettingsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/autoscaleSettingsUpdateSample.js
[baselineslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/baselinesListSample.js
[createnotificationsattenantactiongroupresourcelevelsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/createNotificationsAtTenantActionGroupResourceLevelSample.js
[datacollectionendpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionEndpointsCreateSample.js
[datacollectionendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionEndpointsDeleteSample.js
[datacollectionendpointsgetnspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionEndpointsGetNSPSample.js
[datacollectionendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionEndpointsGetSample.js
[datacollectionendpointslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionEndpointsListByResourceGroupSample.js
[datacollectionendpointslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionEndpointsListBySubscriptionSample.js
[datacollectionendpointslistnspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionEndpointsListNSPSample.js
[datacollectionendpointsreconcilenspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionEndpointsReconcileNSPSample.js
[datacollectionendpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionEndpointsUpdateSample.js
[datacollectionruleassociationscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionRuleAssociationsCreateSample.js
[datacollectionruleassociationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionRuleAssociationsDeleteSample.js
[datacollectionruleassociationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionRuleAssociationsGetSample.js
[datacollectionruleassociationslistbydatacollectionendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionRuleAssociationsListByDataCollectionEndpointSample.js
[datacollectionruleassociationslistbyresourcesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionRuleAssociationsListByResourceSample.js
[datacollectionruleassociationslistbyrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionRuleAssociationsListByRuleSample.js
[datacollectionrulescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionRulesCreateSample.js
[datacollectionrulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionRulesDeleteSample.js
[datacollectionrulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionRulesGetSample.js
[datacollectionruleslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionRulesListByResourceGroupSample.js
[datacollectionruleslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionRulesListBySubscriptionSample.js
[datacollectionrulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/dataCollectionRulesUpdateSample.js
[diagnosticsettingscategorygetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/diagnosticSettingsCategoryGetSample.js
[diagnosticsettingscategorylistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/diagnosticSettingsCategoryListSample.js
[diagnosticsettingscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/diagnosticSettingsCreateOrUpdateSample.js
[diagnosticsettingsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/diagnosticSettingsDeleteSample.js
[diagnosticsettingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/diagnosticSettingsGetSample.js
[diagnosticsettingslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/diagnosticSettingsListSample.js
[eventcategorieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/eventCategoriesListSample.js
[gettestnotificationsattenantactiongroupresourcelevelsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/getTestNotificationsAtTenantActionGroupResourceLevelSample.js
[logprofilescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/logProfilesCreateOrUpdateSample.js
[logprofilesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/logProfilesDeleteSample.js
[logprofilesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/logProfilesGetSample.js
[logprofileslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/logProfilesListSample.js
[logprofilesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/logProfilesUpdateSample.js
[metricalertscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/metricAlertsCreateOrUpdateSample.js
[metricalertsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/metricAlertsDeleteSample.js
[metricalertsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/metricAlertsGetSample.js
[metricalertslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/metricAlertsListByResourceGroupSample.js
[metricalertslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/metricAlertsListBySubscriptionSample.js
[metricalertsstatuslistbynamesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/metricAlertsStatusListByNameSample.js
[metricalertsstatuslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/metricAlertsStatusListSample.js
[metricalertsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/metricAlertsUpdateSample.js
[metricdefinitionslistatsubscriptionscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/metricDefinitionsListAtSubscriptionScopeSample.js
[metricdefinitionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/metricDefinitionsListSample.js
[metricnamespaceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/metricNamespacesListSample.js
[metricslistatsubscriptionscopepostsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/metricsListAtSubscriptionScopePostSample.js
[metricslistatsubscriptionscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/metricsListAtSubscriptionScopeSample.js
[metricslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/metricsListSample.js
[predictivemetricgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/predictiveMetricGetSample.js
[privateendpointconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/privateEndpointConnectionsCreateOrUpdateSample.js
[privateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/privateEndpointConnectionsDeleteSample.js
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/privateEndpointConnectionsGetSample.js
[privateendpointconnectionslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/privateEndpointConnectionsListByPrivateLinkScopeSample.js
[privatelinkresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/privateLinkResourcesGetSample.js
[privatelinkresourceslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/privateLinkResourcesListByPrivateLinkScopeSample.js
[privatelinkscopeoperationstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/privateLinkScopeOperationStatusGetSample.js
[privatelinkscopedresourcescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/privateLinkScopedResourcesCreateOrUpdateSample.js
[privatelinkscopedresourcesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/privateLinkScopedResourcesDeleteSample.js
[privatelinkscopedresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/privateLinkScopedResourcesGetSample.js
[privatelinkscopedresourceslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/privateLinkScopedResourcesListByPrivateLinkScopeSample.js
[privatelinkscopescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/privateLinkScopesCreateOrUpdateSample.js
[privatelinkscopesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/privateLinkScopesDeleteSample.js
[privatelinkscopesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/privateLinkScopesGetSample.js
[privatelinkscopeslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/privateLinkScopesListByResourceGroupSample.js
[privatelinkscopeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/privateLinkScopesListSample.js
[privatelinkscopesupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/privateLinkScopesUpdateTagsSample.js
[scheduledqueryrulegetnspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/scheduledQueryRuleGetNSPSample.js
[scheduledqueryrulelistnspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/scheduledQueryRuleListNSPSample.js
[scheduledqueryrulereconcilenspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/scheduledQueryRuleReconcileNSPSample.js
[scheduledqueryrulescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/scheduledQueryRulesCreateOrUpdateSample.js
[scheduledqueryrulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/scheduledQueryRulesDeleteSample.js
[scheduledqueryrulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/scheduledQueryRulesGetSample.js
[scheduledqueryruleslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/scheduledQueryRulesListByResourceGroupSample.js
[scheduledqueryruleslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/scheduledQueryRulesListBySubscriptionSample.js
[scheduledqueryrulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/scheduledQueryRulesUpdateSample.js
[servicediagnosticsettingscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/serviceDiagnosticSettingsCreateOrUpdateSample.js
[servicediagnosticsettingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/serviceDiagnosticSettingsGetSample.js
[servicediagnosticsettingsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/serviceDiagnosticSettingsUpdateSample.js
[tenantactiongroupscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/tenantActionGroupsCreateOrUpdateSample.js
[tenantactiongroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/tenantActionGroupsDeleteSample.js
[tenantactiongroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/tenantActionGroupsGetSample.js
[tenantactiongroupslistbymanagementgroupidsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/tenantActionGroupsListByManagementGroupIdSample.js
[tenantactiongroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/tenantActionGroupsUpdateSample.js
[tenantactivitylogslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/tenantActivityLogsListSample.js
[vminsightsgetonboardingstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/javascript/vMInsightsGetOnboardingStatusSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-monitor
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/monitor/arm-monitor/README.md
